force-app/main/default/objects/Room__c.object
<CustomObject>
    <fields>
        <fullName>Hotel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hotel</label>
        <referenceTo>Hotel__c</referenceTo>
        <relationshipLabel>Rooms</relationshipLabel>
        <relationshipName>Rooms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Room_Type__c</fullName>
        <label>Room Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Room</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RM-{0000}</displayFormat>
        <label>Rooms Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rooms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>